[gd_scene load_steps=19 format=3 uid="uid://rghj70151w54"]

[ext_resource type="Script" path="res://player.gd" id="1_2p8np"]
[ext_resource type="Texture2D" uid="uid://b6cbpt02t20xb" path="res://textures/body_player.png" id="1_44ass"]
[ext_resource type="Texture2D" uid="uid://b81pgf7fouhy6" path="res://textures/arm_leg.png" id="2_2hmvv"]
[ext_resource type="Texture2D" uid="uid://bf6gbikmn7ofd" path="res://textures/skin.png" id="3_m76bx"]
[ext_resource type="Texture2D" uid="uid://gnqb6m0opolc" path="res://textures/Head.png" id="4_2khc7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ponnq"]
size = Vector3(1, 3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o1k01"]
albedo_texture = ExtResource("1_44ass")

[sub_resource type="BoxMesh" id="BoxMesh_5lgyg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ui74d"]
albedo_texture = ExtResource("2_2hmvv")

[sub_resource type="BoxMesh" id="BoxMesh_5dgaa"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g64at"]
albedo_texture = ExtResource("3_m76bx")

[sub_resource type="PrismMesh" id="PrismMesh_jn5c4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_45rqq"]
albedo_texture = ExtResource("2_2hmvv")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f8s8l"]
albedo_texture = ExtResource("2_2hmvv")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pf6dh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_grsfp"]
albedo_texture = ExtResource("4_2khc7")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_23xsb"]
albedo_texture = ExtResource("3_m76bx")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3kta7"]

[node name="Players" type="CharacterBody3D"]
collision_mask = 8
script = ExtResource("1_2p8np")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6822, 0)
shape = SubResource("BoxShape3D_ponnq")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="Hitbox" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6822, 0)
shape = SubResource("BoxShape3D_ponnq")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 1.2, 0, 0, 0, 1, 0, 1.6822, 0)
material_override = SubResource("StandardMaterial3D_o1k01")
mesh = SubResource("BoxMesh_5lgyg")
skeleton = NodePath("")

[node name="Arm" type="MeshInstance3D" parent="."]
transform = Transform3D(0.362659, -0.379701, 0, 0.168756, 0.815982, 0, 0, 0, 0.3, 0.127782, 1.79836, 0.643317)
material_override = SubResource("StandardMaterial3D_ui74d")
mesh = SubResource("BoxMesh_5dgaa")
skeleton = NodePath("")

[node name="Hand" type="MeshInstance3D" parent="Arm"]
transform = Transform3D(-0.99999, -0.000879809, 0, 0.00439824, -0.199998, 0, 0, 0, 1, -0.0143204, -0.594958, 0)
material_override = SubResource("StandardMaterial3D_g64at")
mesh = SubResource("PrismMesh_jn5c4")

[node name="Arm2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.362659, -0.379701, 0, 0.168756, 0.815982, 0, 0, 0, 0.3, 0.127782, 1.79836, -0.645362)
material_override = SubResource("StandardMaterial3D_ui74d")
mesh = SubResource("BoxMesh_5dgaa")
skeleton = NodePath("")

[node name="Hand" type="MeshInstance3D" parent="Arm2"]
transform = Transform3D(-0.99999, -0.000879809, 0, 0.00439824, -0.199998, 0, 0, 0, 1, -0.0143204, -0.594958, 0)
material_override = SubResource("StandardMaterial3D_g64at")
mesh = SubResource("PrismMesh_jn5c4")

[node name="Leg" type="MeshInstance3D" parent="."]
transform = Transform3D(0.45, 0, 0, 0, 1, 0, 0, 0, 0.45, 0, 0.58225, 0.26346)
material_override = SubResource("StandardMaterial3D_45rqq")
mesh = SubResource("BoxMesh_5dgaa")
skeleton = NodePath("")

[node name="Feet" type="MeshInstance3D" parent="Leg"]
transform = Transform3D(-1.31134e-08, -0.8, 0, 0.3, -3.49691e-08, 0, 0, 0, 1.2, 0.251066, -0.46026, 0)
material_override = SubResource("StandardMaterial3D_f8s8l")
mesh = SubResource("CapsuleMesh_pf6dh")

[node name="Leg2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.45, 0, 0, 0, 1, 0, 0, 0, 0.45, 0, 0.58225, -0.265091)
material_override = SubResource("StandardMaterial3D_45rqq")
mesh = SubResource("BoxMesh_5dgaa")
skeleton = NodePath("")

[node name="Feet" type="MeshInstance3D" parent="Leg2"]
transform = Transform3D(-1.31134e-08, -0.8, 0, 0.3, -3.49691e-08, 0, 0, 0, 1.2, 0.251066, -0.46026, 0)
material_override = SubResource("StandardMaterial3D_f8s8l")
mesh = SubResource("CapsuleMesh_pf6dh")

[node name="Head" type="MeshInstance3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 2.72456, 0)
material_override = SubResource("StandardMaterial3D_grsfp")
mesh = SubResource("BoxMesh_5dgaa")
skeleton = NodePath("")

[node name="Neck" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.558186, 0)
material_override = SubResource("StandardMaterial3D_23xsb")
mesh = SubResource("CapsuleMesh_3kta7")

[node name="ShotCooldown" type="Timer" parent="."]
one_shot = true

[node name="DamageInvuln" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
